# quintet

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  QuintetConfig.h.in  README.md
cmake/: FindGRPC.cmake
dependencies/src/: CMakeLists.txt
dependencies/src/boost_serialization/: CMakeLists.txt
example/: CMakeLists.txt  chatRoom.cpp  example.cpp
example/RaftConfig/: RaftConfig0.json  RaftConfig1.json  RaftConfig2.json  RaftConfig3.json  RaftConfig4.json
include/quintet/: Client.h  Interface.h  Macro.h  PseudoRaft.h  QuintetConfig.h  QuintetDefs.h  Serialization.h  client_context.h  common.h  server.h  server_info.h
include/quintet/base/: macro.h
include/quintet/client/: client.h  serialization.h
include/quintet/common/: client_context.h  config.h  macro.h  utils.h
include/quintet/component/: Future.h  Utility.h
include/quintet/log/: common.h  global.h
include/quintet/misc/: Object.h  Serialization.h  event_queue.h  macro.h  rand.h
include/quintet/raft/: Identity.h  Raft.h  RaftClient.h  RaftDebugContext.h  RaftDefs.h  Server.h  ServerInfo.h  ServerService.h  ServerState.h  debug_context.h  raft.h  raft_common.h  service.h  state.h
include/quintet/raft/identity/: CandidateStateInterface.h  IdentityBase.h  IdentityBaseImpl.h  IdentityBogus.h  IdentityCandidate.h  IdentityFollower.h  IdentityLeader.h  LeaderStateInterface.h  ServerIdentityBase.h  ServerIdentityCandidate.h  ServerIdentityFollower.h  ServerIdentityLeader.h  StateInterface.h  StateInterfaceImpl.h  identity.h  identity_base.h  identity_base_impl.h  identity_candidate.h  identity_follower.h  identity_leader.h
include/quintet/raft/misc/: EventQueue.h  FileIO.h  Rand.h  Thread.h
include/quintet/raft/rpc/: common.h  conversion.h  raft.grpc.pb.h  raft.pb.h  rpc_client.h  rpc_server.h
include/quintet/raft/service/: Apply.h  Committer.h  HeartBeatController.h  IdentityTransformer.h  RpcClients.h  RpcService.h  apply.h  heartbeat_controller.h  identity_transformer.h
include/quintet/raft/service/log/: Common.h  Global.h  Sinks.h
include/quintet/raft/service/rpc/: Conversion.h  RpcDefs.h  (+5 more)
include/quintet/rpc/: Conversion.h  Error.h  Quintet.grpc.pb.h  Quintet.pb.h  client_impl.h  conversion.h  quintet.grpc.pb.h  quintet.pb.h  rpc_server.h
include/quintet/server/: actor_types.h  common.h  config.h  identity_transformer.h  logger.h  raft.h  raft_common.h  raft_state.h  rpc_error.h  rpc_receiver.h  rpc_sender.h  server.h  state_machine.h  timer.h
include/quintet/server/raft/: common.h
protobuf/: CMakeLists.txt  Quintet.proto  RaftRpc.proto  external.proto  gen_grpc_files.bash  gen_grpc_files.sh  internal.proto  raft.proto
quintet/: Defs.h  Interface.h  Serialization.h  ServerInfo.cpp  ServerInfo.h  SharedInterface.h  Utility.h
quintet/component/: Future.h  Utility.cpp  Utility.h
quintet/components/: Switch.h
quintet/raft/: Raft.cpp  Raft.h  RaftDefs.h  Server.cpp  Server.h  ServerInfo.cpp  ServerInfo.h  ServerService.cpp  ServerService.h  ServerState.cpp  ServerState.h
quintet/raft/identity/: ServerIdentity.h  ServerIdentityBase.cpp  ServerIdentityBase.h  ServerIdentityCandidate.cpp  ServerIdentityCandidate.h  ServerIdentityFollower.cpp  ServerIdentityFollower.h  ServerIdentityLeader.cpp  ServerIdentityLeader.h
script/: install-grpc.sh
src/: CMakeLists.txt  Client.cpp  FindGRPC.cmake  Interface.cpp  PseudoRaft.cpp  client.cpp  client_context.cpp  common.cpp  server.cpp  server_info.cpp
src/client/: client.cpp
src/common/: config.cpp
src/common/rpc/: external.grpc.pb.cc  external.grpc.pb.h  external.pb.cc  external.pb.h
src/component/: Utility.cpp
src/log/: global.cpp
src/misc/: event_queue.cpp
src/raft/: Raft.cpp  RaftClient.cpp  RaftDefs.cpp  Server.cpp  ServerInfo.cpp  ServerService.cpp  ServerState.cpp  raft.cpp
src/raft/identity/: IdentityBase.cpp  IdentityBaseImpl.cpp  IdentityBogus.cpp  IdentityCandidate.cpp  IdentityFollower.cpp  IdentityLeader.cpp  LeaderStateInterface.cpp  ServerIdentityBase.cpp  ServerIdentityCandidate.cpp  ServerIdentityFollower.cpp  ServerIdentityLeader.cpp  StateInterface.cpp  StateInterfaceImpl.cpp  identity_base_impl.cpp  identity_candidate.cpp  identity_follower.cpp  identity_leader.cpp
src/raft/misc/: EventQueue.cpp  FileIO.cpp  Rand.cpp  Thread.cpp
src/raft/rpc/: conversion.cpp  raft.grpc.pb.cc  raft.pb.cc  rpc_client.cpp  rpc_server.cpp
src/raft/service/: HeartBeatController.cpp  IdentityTransformer.cpp  RpcClients.cpp  RpcService.cpp  heartbeat_controller.cpp  identity_transformer.cpp
src/raft/service/log/: Global.cpp  Sinks.cpp
src/raft/service/rpc/: Conversion.cpp  RaftRpc.grpc.pb.cc  RaftRpc.pb.cc  RpcClient.cpp  RpcClients.cpp  RpcService.cpp
src/rpc/: Conversion.cpp  Quintet.grpc.pb.cc  Quintet.pb.cc  quintet.grpc.pb.cc  quintet.pb.cc  rpc_server.cpp
src/server/: config.cpp  identity_transformer.cpp  logger.cpp  raft.cpp  rpc_receiver.cpp  rpc_sender.cpp  server.cpp  state_machine.cpp  timer.cpp
src/server/rpc/: internal.grpc.pb.cc  internal.grpc.pb.h  internal.pb.cc  internal.pb.h
test/: CMakeLists.txt  SampleConfig.json  SampleConsensus.cpp  SampleConsensus.h  Test.cpp  TestConfig  TestHeartBeatController.cpp  TestInterface.cpp  TestLogger.cpp  TestRaft.cpp  TestRpcService.cpp  TestServer.cpp  basic.cpp  test.cpp
test/Identity/: IdentityTestHelper.cpp  IdentityTestHelper.h  TestCandidate.cpp  TestFollower.cpp
test/Misc/: ServiceTestHelper.cpp  ServiceTestHelper.h  TestHeartBeatController.cpp  TestRpcService.cpp
test/RaftConfig/: RaftConfig0.json  RaftConfig1.json  RaftConfig2.json  RaftConfig3.json  RaftConfig4.json
test/comprehensive/: TestRaft.cpp
test/config/: raft0.json
test/identity/: CMakeLists.txt  IdentityTest.cpp  IdentityTestHelper.cpp  IdentityTestHelper.h  TestCandidate.cpp  TestFollower.cpp  TestLeader.cpp
test/misc/: TestEventQueue.cpp  TestFile.cpp  TestRpc.cpp
test/quintet/: QuintetTestHelper.cpp  QuintetTestHelper.h  TestInterface.cpp
test/raft/: identity_test_helper.h  test_candidate.cpp  test_leader.cpp
test/raft/config/: raft_1.json  raft_2.json
